2004-11-04  Carl Worth  <cworth@cworth.org>

	* test/text_cache_crash.c: Add new test demonstrating assertion
	failure in cairo_cache_lookup.

	* test/text_rotate.c: Add new test showing problems with rotated
	text.

2004-11-04  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_glitz_surface.c (cairo_set_target_glitz): 
	cairo_glitz_surface_create now takes a reference to the glitz
	surface, so it shouldn't be done here anymore.
	Removed feature_mask from cairo_glitz_surface_t.
	Removed support for CAIRO_OPERATOR_SATURATE.
	(cairo_glitz_surface_create): Take a reference to the glitz
	surface and no need to get surface features anymore.
	Tracking changes to glitz.

	* configure.in: Require version 0.3.0 of glitz.

	* src/cairo_gstate.c (_cairo_gstate_clip): Fixed return status.

2004-11-01  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* src/cairo.h: remove cairo_ft_font_destroy() prototype.

2004-10-28  Carl Worth  <cworth@cworth.org>

	* Makefile.am (release-verify-newer): Abort release-publish if
	there's already a published tar file with the current version.
	(release-publish): Add code to update the LATEST-package-version
	file.

2004-10-27  Carl Worth  <cworth@cworth.org>

	* configure.in: Increment CAIRO_VERSION to 0.2.0.

	* NEWS: Add notes for snapshot 0.2.0.
	Add note on reverted tessellation regression bugs.

	* RELEASING: Update release instructions for new release-publish
	target.

	* Makefile.am: Add release-check and release-publish targets
	copied from libpixman.

	* test/Makefile.am (AM_LDFLAGS): Fix to always link tests against
	locally built library, not installed version.

	* test/fill_rule.c: Add new test for cairo_set_fill_rule. Also
	demonstrate some of the current tessellation bugs with the version
	of the code that is in CVS.

2004-10-26  Carl Worth  <cworth@cworth.org>

	* test/cairo_test.c (cairo_test): Find reference images in
	${srcdir} so that make distcheck will work.
